--- a/partials/my-characters.html
+++ b/partials/my-characters.html
@@ -1,1 +1,53 @@
+<div class="cards-title" onload="showMyCharacters()">
 <h1>YOUR CHARACTERS</h1>
+</div>
+
+<div class="row">
+  <div class="col-sm-6 col-md-4" ng-repeat="characters in characterData track by $index"> 
+  <!-- CHARACTER DATA COMING FROM showMyCharacters in control-my-characters -->
+    <div class="thumbnail">
+      <div class="caption">
+        <h3><strong>{{characters.name}}</strong></h3>
+        <h5>RACE</h5>
+        <p>{{characters.race}}</p>
+        <h5>CLASS</h5>
+        <ul>
+        	<li>{{characters.class}}</li>
+        </ul>
+        <h5>SKILLS</h5>
+        <ul>
+        	<li>{{characters.skills}}</li>
+        </ul>
+        <h5>PROFICIENCIES</h5>
+        <ul>
+        	<li>{{characters.proficiencies}}</li>
+        </ul>
+        <h5>FEATS</h5>
+        <ul>
+        	<li>{{characters.feats}}</li>
+        </ul>
+        <h5>EQUIPMENT</h5>
+        <ul>
+        	<li>{{characters.equipment}}</li>
+        </ul>
+        <h5>MAGIC SCHOOLS</h5>
+        <ul>
+        	<li>{{characters.magicschools}}</li>
+        </ul>
+        <h5>SPELLS</h5>
+        <ul>
+        	<li>{{characters.spells}}</li>
+        </ul>
+        <h5>STORY LINE</h5>
+        <ul>
+        	<li>{{characters.storyline}}</li>
+        </ul>
+        <a class="btn btn-primary" role="button" ng-href="#!/EditCharacter/{{characters.id}}">Edit</a>
+        <!-- SENT TO EDIT PARTIAL PAGE NO FUNCTIONS FIRED JUST ng-models TAKEN -->
+        <a class="btn btn-primary" role="button" ng-click="deleteBtn(characters.id)">Delete</a> 
+        <!-- SENT TO FACTORY.DATA WITH ID FROM THIS CHARACTER -->
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
