--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,15 +33,14 @@ body{
   height: 100%;
   color: #FFFFFF;
 }
-
+#charCreat input{
+  color: black;
+}
 #charCreat{
   width: 45%;
   display: inline-block;
   float: left;
   background-color: #DFD297;
-}
-#charCreat div ul{
-
 }
 #charCreat div{
   display: flex;
@@ -58,7 +57,23 @@ body{
   width: 45%;
   display: inline-block;
   float: right;
-  background-color: #000000;
+  background-color: tomato;
+  position: fixed;
+  padding: 3vh;
+  height: 100vh;
+  overflow: scroll;
+  padding-bottom: 12vh;
+  color: black;
+}
+
+
+/*EDIT PAGE*/
+
+#characterToEdit{
+  width: 45%;
+  display: inline-block;
+  float: left;
+  background-color: #dddddd;
   position: fixed;
   padding: 3vh;
   height: 100vh;
@@ -66,6 +81,32 @@ body{
   padding-bottom: 12vh;
 }
 
-#yourName{
+#apiInfoForEdit{
+  width: 45%;
+  display: inline-block;
+  float: right;
+  background-color: #DFD297;
+}
+
+#apiInfoForEdit div{
+  display: flex;
+  flex-direction: column;
+  max-height: 1000px;
+  overflow: scroll;
+  background-color: #AC2832;
+  margin: 2vh;
+  border: solid black 3px;
+}
+
+#apiInfoForEdit input{
   color: black;
 }
+
+
+
+
+
+
+
+
+
