--- a/partials/character-creator.html
+++ b/partials/character-creator.html
@@ -72,7 +72,6 @@
 		<h1>CHARACTER FORM</h1>
 		<!--NAME-->
 		Name: <input type="text" name="Name" placeholder="Character Name" id="yourName" ng-model="charName">
-		<button ng-click="submitName(charName)">Save Name</button>
 		<!-- RACE -->
 		<div id="race" class="formBox">
 			<h3>Race</h3>
@@ -142,32 +141,31 @@
 		<!-- NOTES -->
 		<div>
 			<h3>Story Line</h3>
-			<textarea rows="10" cols="70" id="notes" ng-model="notes" placeholder="Quest involvement, backstory, personality, etc."></textarea>
-			<button ng-click="submitNotes(notes)">Save Story</button><br><br>
+			<textarea rows="10" cols="70" id="notes" ng-model="notes" placeholder="Quest involvement, backstory, personality, etc."></textarea><br><br>
 		</div>
 		<!-- STATS -->
-		<input type="text"></input>:HP<br>
-		<input type="text"></input>:INITIATIVE<br>
-		<input type="text"></input>:AC<br>
+		<input type="text" ng-model="HP"></input>:HP<br>
+		<input type="text" ng-model="INITIATIVE"></input>:INITIATIVE<br>
+		<input type="text" ng-model="AC"></input>:AC<br>
 		<br><br>
 
-		<input type="text"></input>:STR<br>
-		<input type="text"></input>:DEX<br>
-		<input type="text"></input>:CON<br>
-		<input type="text"></input>:INT<br>
-		<input type="text"></input>:WIS<br>
-		<input type="text"></input>:CHA<br>
+		<input type="text" ng-model="STR"></input>:STR<br>
+		<input type="text" ng-model="DEX"></input>:DEX<br>
+		<input type="text" ng-model="CON"></input>:CON<br>
+		<input type="text" ng-model="INT"></input>:INT<br>
+		<input type="text" ng-model="WIS"></input>:WIS<br>
+		<input type="text" ng-model="CHA"></input>:CHA<br>
 		<br><br>
 
-		<input type="text"></input>:FORT<br>
-		<input type="text"></input>:REF<br>
-		<input type="text"></input>:WILL<br>
+		<input type="text" ng-model="FORT"></input>:FORT<br>
+		<input type="text" ng-model="REF"></input>:REF<br>
+		<input type="text" ng-model="WILL"></input>:WILL<br>
 		<br><br>
 
-		<input type="text"></input>:BAB<br>
-		<input type="text"></input>:SPELL RESIST<br>
-		<input type="text"></input>:GRAPPLE<br>
+		<input type="text" ng-model="BAB"></input>:BAB<br>
+		<input type="text" ng-model="SPRES"></input>:SPELL RESIST<br>
+		<input type="text" ng-model="GRAPPLE"></input>:GRAPPLE<br>
 		<br><br>
-		<button type="submit" ng-click="sumbitNewCharacter()">SAVE CHARACTER</button>
+		<button type="submit" ng-click="saveInfo(charName, notes, HP, INITIATIVE, AC, STR, DEX, CON, INT, WIS, CHA, FORT, REF, WILL, BAB, SPRES, GRAPPLE)">SAVE CHARACTER</button>
 	</div>
 </div>
