--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -1,5 +1,6 @@
 <section id="login-section">
   <div class="login-google">
     <button type="button" class="btn btn-default" ng-click="logInGoogle()">Log In With Google</button>
+    <button type="button" class="btn btn-default" ng-click="logOut()">LogOut</button>
   </div>
 </section>
