--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a ng-href="#!/MyCharacters">My Characters</a></li>
-        <li><a ng-href="#!/MyMaps">My Maps</a></li>
+        <li><a ng-href="#!/MyRegions">My Regions</a></li>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -25,7 +25,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a ng-href="#!/CreateCharacter">Create Character</a></li>
         <li><a ng-href="#!/CreateRegion">Create Region</a></li>
-        <li><a ng-href="#" ng-click="logOut()">LogOut</a></li>
+        <li><a href="#">LogIn/Out</a></li>
+        <li><a ng-href="#!/home">Profile Page</a></li>
         <li><div id="profile-image-anchor"></div></li>
       </ul>
     </div><!-- /.navbar-collapse -->
