--- a/partials/my-characters.html
+++ b/partials/my-characters.html
@@ -7,7 +7,8 @@
   <!-- CHARACTER DATA COMING FROM showMyCharacters in control-my-characters -->
     <div class="thumbnail">
       <div class="caption">
-        <h3><strong>{{characters.name}}</strong></h3>
+        <h5>NAME:</h5>
+        <p>{{characters.name}}</p>
         <h5>RACE</h5>
         <p>{{characters.race}}</p>
         <h5>CLASS</h5>
@@ -56,7 +57,10 @@
         <li>INT: {{characters.INT}}</li>
         <li>WILL: {{characters.WILL}}</li>
  
-        </ul>
+        </ul><br>
+
+        <h5>REGION</h5>
+        <p>{{characters.region}}</p><br>
 
         <a class="btn btn-primary" role="button" ng-href="#!/EditCharacter/{{characters.id}}">Edit</a>
         <!-- SENT TO EDIT PARTIAL PAGE NO FUNCTIONS FIRED JUST ng-models TAKEN -->
