--- a/partials/my-regions.html
+++ b/partials/my-regions.html
@@ -1,7 +1,15 @@
 <h1>YOUR REGIONS</h1>
-<div onload="showMyRegions()" class="jumbotron" ng-repeat="regions in regionData track by $index">
+<div class="jumbotron" ng-repeat="regions in regionData track by $index">
   <h1>{{regions.name}}</h1> <!-- Name of your region -->
   <p>{{regions.info}}</p> <!-- Region Info -->
   <a class="btn btn-primary" role="button" ng-href="#!/EditRegion/{{regions.id}}">Edit</a> 
   <a class="btn btn-primary" role="button" ng-click="regDeleteBtn(regions.id)">Delete</a>
+  <!-- PULL IN CHARACTER CARDS WITH MATCHING REGION -->
+  <br><br>
+  <h3>Region Characters</h3>
+  <div ng-repeat="characters in characterData track by $index">
+  	<h3>{{characters.name}}</h3>
+  	<p>{{characters.storyline}}</p>
+  </div>
+
 </div>
