--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -1,6 +1,35 @@
-<section id="login-section">
-  <div class="login-google">
-    <button type="button" class="btn btn-default" ng-click="logInGoogle()">Log In With Google</button>
-    <button type="button" class="btn btn-default" ng-click="logOut()">LogOut</button>
-  </div>
-</section>
+<div id="homePageContainer">
+	<div id="introduction">
+		<p>Hello! 
+
+		Welcome to this simple DnD character builder. <br><br>
+
+		To begin, please sign in with Google. <br><br>
+
+		After you have logged in, you may begin creating regions and characters.<br><br>
+
+		The regions are here for you to establish locations within your campaign, and what information you, as the campaign organizer, must remember. <br><br>
+
+		After you have built your regions, you can start populating them with characters.<br><br> 
+
+		To create characters, simply click on the CREATE CHARACTER tab and fill out the form. At the bottom of the form, you will see your previously created regions. Here you can assign characters to occupy a specific region. <br><br>
+
+		Now that you have created both regions and characters, you can click on the MY CHARACTERS tab and see all of your characters with the information you provided. <br><br>
+
+		In addition you can click on the MY REGIONS tab and see all of your created regions as well as all of the characters that belong to that region. <br><br>
+
+		To log out, simply come back to this page and click the LOG OUT button. 
+
+		Thank you, and enjoy!
+		</p>
+	</div>
+
+	<section id="login-section">
+		<div class="login-google">
+	    	<button type="button" class="btn btn-default" ng-click="logInGoogle()">Log In With Google</button>
+		</div>
+		<div class="logOut">
+	    	<button type="button" class="btn btn-default" ng-click="logOut()">Log Out</button>
+		</div>
+	</section>
+</div>
