--- a/partials/my-characters.html
+++ b/partials/my-characters.html
@@ -2,44 +2,41 @@
 <h1>YOUR CHARACTERS</h1>
 </div>
 
-<div class="row">
-  <div class="col-sm-6 col-md-4" ng-repeat="characters in characterData track by $index"> 
+<div class="row myCharacterContainer">
+  <div class="col-sm-6 col-md-4 myCharactersDisplay" ng-repeat="characters in characterData track by $index"> 
   <!-- CHARACTER DATA COMING FROM showMyCharacters in control-my-characters -->
     <div class="thumbnail">
       <div class="caption">
-        <h5>NAME:</h5>
-        <p>{{characters.name}}</p>
-        <h5>RACE</h5>
+        <h2 class="CharacterName">{{characters.name}}</h2>
+        <h4>RACE</h4>
         <p>{{characters.race}}</p>
-        <h5>CLASS</h5>
+        <h4>CLASS</h4>
         <ul ng-repeat="class in characters.class track by $index">
         	<li>{{class}}</li>
         </ul>
-        <h5>SKILLS</h5>
+        <h4>SKILLS</h4>
         <ul ng-repeat="skills in characters.skills track by $index">
         	<li>{{skills}}</li>
         </ul>
-        <h5>FEATS</h5>
+        <h4>FEATS</h4>
         <ul ng-repeat="feats in characters.feats track by $index">
         	<li>{{feats}}</li>
         </ul>
-        <h5>INVENTORY</h5>
+        <h4>INVENTORY</h4>
         <ul ng-repeat="equipment in characters.equipment track by $index">
         	<li>{{equipment}}</li>
         </ul>
-        <h5>MAGIC SCHOOLS</h5>
+        <h4>MAGIC SCHOOLS</h4>
         <ul ng-repeat="magicschools in characters.magicschools track by $index">
         	<li>{{magicschools}}</li>
         </ul>
-        <h5>SPELLS</h5>
+        <h4>SPELLS</h4>
         <ul ng-repeat="spells in characters.spells track by $index">
         	<li>{{spells}}</li>
         </ul>
-        <h5>STORY LINE</h5>
-        <ul>
-        	<li>{{characters.storyline}}</li>
-        </ul>
-        <h5>STATS</h5>
+        <h4>STORY LINE</h4>
+        <p id="myCharacterStoryline">{{characters.storyline}}</p>
+        <h4>STATS</h4>
         <ul>
         <li>HP: {{characters.HP}}</li>
         <li>AC: {{characters.AC}}</li>
@@ -59,7 +56,7 @@
  
         </ul><br>
 
-        <h5>REGION</h5>
+        <h4>REGION</h4>
         <p>{{characters.region}}</p><br>
 
         <a class="btn btn-primary" role="button" ng-href="#!/EditCharacter/{{characters.id}}">Edit</a>
