--- a/partials/my-regions.html
+++ b/partials/my-regions.html
@@ -1,3 +1,4 @@
+<div class="myRegionContainer">
 <h1>YOUR REGIONS</h1>
 <div class="jumbotron" ng-repeat="regions in regionData track by $index">
   <h1>{{regions.name}}</h1> <!-- Name of your region -->
@@ -8,11 +9,12 @@
   <br><br>
   <div>
   <h3>Region Characters</h3>
-  <div ng-repeat="character in regions.characters track by $index">
-  		<h3>{{character.name}}</h3>
+  <div id="characterInRegion" ng-repeat="character in regions.characters track by $index">
+  	<h4>{{character.name}}</h4>
   	<p>{{character.storyline}}</p>
   	
   </div>
 </div>
 
+</div>
 </div>
