--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -8,25 +8,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" ng-href="#!/home">CHARACTER BUILDER</a>
+      <a class="navbar-brand" id="logo" ng-href="#!/home">CHARACTER BUILDER</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a ng-href="#!/MyCharacters">My Characters</a></li>
-        <li><a ng-href="#!/MyRegions">My Regions</a></li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
         <li><a ng-href="#!/CreateCharacter">Create Character</a></li>
         <li><a ng-href="#!/CreateRegion">Create Region</a></li>
-        <li><a href="#">LogIn/Out</a></li>
-        <li><a ng-href="#!/home">Profile Page</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a ng-href="#!/MyCharacters">My Characters</a></li>
+        <li><a ng-href="#!/MyRegions">My Regions</a></li>
+        <li><a href="#">Home</a></li>
         <li><div id="profile-image-anchor"></div></li>
       </ul>
     </div><!-- /.navbar-collapse -->
